--- a/index.html
+++ b/index.html
@@ -2,9 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>start Page</title>
+    <title>Scrapbasket SPA</title>
+
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Scrapbasket SPA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#admin" class="nav-link">Admin</a>
+            </li>
+            <li class="nav-item dropdown" id="accountDropdownContainer">
+                <!-- Dynamic content will be injected here -->
+            </li>
+        </ul>
+    </div>
+    <div>
+        <button id="btn-signup" type="button" class="btn btn-primary">Sign up</button>
+        <button id="btn-show-login" type="button" class="btn btn-primary">Sign in</button>
+        <button id="btn-fetch" type="button" class="btn btn-secondary" hidden>Fetch data</button>
+        <button id="btn-get-secret" type="button" class="btn btn-danger" hidden>Get Secret</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="login-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p ><span id="loggedin"></span></p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="username-field" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="username-field">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password-field" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password-field">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button id="btn-form-login" type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
 
+<!-- Dynamic Content Area -->
+<div id="app" class="container"></div>
+
+<!-- Bootstrap 5 Bundle JS (includes Popper.js 2.x) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Main JavaScript File -->
+<script type="module" src="js/main.js"></script>
+<script src="js/jarlsLoginScript.js"></script>
 </body>
 </html>
