--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
+                <a href="#anime" class="nav-link">Anime</a>
+            </li>
+            <li class="nav-item">
                 <a href="#admin" class="nav-link">Admin</a>
             </li>
             <li class="nav-item dropdown" id="accountDropdownContainer">
