--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p ><span id="loggedin"></span></p>
+                    <p><span id="loggedin"></span></p>
                     <form>
                         <div class="mb-3">
                             <label for="username-field" class="form-label">Name</label>
@@ -69,9 +69,24 @@
         </div>
     </div>
 </nav>
-
 <!-- Dynamic Content Area -->
-<div id="app" class="container"></div>
+<div id="app" class="container mt-5"></div>
+
+<!-- Footer -->
+<footer class="bg-light text-center text-lg-start mt-auto py-3 border-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-md-start">
+                <p class="mb-0">&copy; 2024 Scrapbasket SPA. All rights reserved.</p>
+            </div>
+            <div class="col-md-6 text-md-end">
+                <a href="#privacy" class="text-decoration-none mx-2">Privacy Policy</a>
+                <a href="#terms" class="text-decoration-none mx-2">Terms of Service</a>
+                <a href="#contact" class="text-decoration-none mx-2">Contact</a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <!-- Bootstrap 5 Bundle JS (includes Popper.js 2.x) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
